[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-analyzer"
version = "1.0.0"
description = "Analyze personal sleep logs and recommend optimal sleep windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
sleep-analyzer = "sleep_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["sleep_analyzer*"]
